# DeskVane

./: .gitignore  README.md  pyproject.toml
deskvane/: __init__.py  __main__.py  app.py  app_context.py  app_kernel.py  bootstrap.py  capture.py  clipboard_history.py  config.py  feature_module.py  git_proxy.py  help_doc.py  hotkeys.py  log.py  notifier.py  pin.py  runtime_sidecar.py  screenshot.py  settings_panel.py  sysmon.py  terminal_proxy.py  tray.py  ui_theme.py  version.py
docs/: README.md  architecture-design.md  cross-platform-refactor-plan.md  platform-feature-matrix.md  platform-support-statement.md  release-process.md  tauri-migration-plan.md
frontend/: README.md  index.html  package.json
packaging/: README.md  deskvane.desktop
scripts/: README.md  build-deb.sh  build-macos.sh  build-pyinstaller.sh  build-win.ps1  fix-mihomo-tun.sh  install-desktop-entry.sh  install.sh  launch-tauri-source.sh  run-legacy-runtime.sh  run-runtime-api.sh  run-source.sh  run-tauri-source.sh
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_app_kernel.py  test_bootstrap.py  test_config.py  test_config_validation.py  test_decoder.py  test_feature_state_getters.py  test_git_proxy.py  test_mihomo_api.py  test_mihomo_app.py  test_mihomo_core.py  test_mihomo_panel.py  test_packaging_artifacts.py  test_platform_capture.py  test_platform_cross_platform_services.py  test_platform_factory.py  test_platform_feature_gating.py  test_platform_hotkeys.py  test_platform_mvp_services.py  test_platform_shell_smoke.py  test_platform_tray.py  (+11 more)
(+96 files in other folders)
